UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_EVC_Location_Details__c/ftr_EVC_Location_Details__c.object-meta.xml
<CustomObject>
    <label>EVC Location Details</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EVC Location Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>