UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_EVC_Location_Details__c/fields/ftr_BandWidth__c.field-meta.xml
<CustomField>
    <fullName>ftr_BandWidth__c</fullName>
    <label>Bandwidth (Mbps)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>