UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_EVC_Location_Details__c/fields/ftr_CPE_softwareRel__c.field-meta.xml
<CustomField>
    <fullName>ftr_CPE_softwareRel__c</fullName>
    <label>CPE/PBX Software Rel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>