UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_EVC_Location_Details__c/fields/ftr_RouterWaived__c.field-meta.xml
<CustomField>
    <fullName>ftr_RouterWaived__c</fullName>
    <label>Cust OPT Out of FTR Router</label>
    <length>100</length>
    <type>Text</type>
</CustomField>