UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_EVC_Location_Details__c/fields/RouteTarget__c.field-meta.xml
<CustomField>
    <fullName>RouteTarget__c</fullName>
    <label>Route Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>